T-45 [Oleksii Datsiuk] Did a minor refactoring